<resources>
    <string name="app_name">Swosh</string>
    <string name="backgroung_image">backgroung image</string>
    <string name="desired_league">Desired league</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co- Ed</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="another_backgroung_image">another backgroung image</string>
    <string name="logo">logo</string>
    <string name="backgound">backgound</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">beginner</string>

    <string name="baller">baller</string>

    <string name="finish">finish</string>

</resources>